--- a/app/src/main/res/layout/fragment_citas.xml
+++ b/app/src/main/res/layout/fragment_citas.xml
@@ -11,53 +11,26 @@
         android:id="@+id/toolbar"
         layout="@layout/toolbar" />
 
-    <com.getbase.floatingactionbutton.FloatingActionsMenu
-        android:id="@+id/menuDP"
-        android:layout_width="136dp"
-        android:layout_height="200dp"
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/consultador"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="bottom|end"
-        android:layout_marginStart="8dp"
-        android:layout_marginLeft="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginRight="8dp"
-        android:layout_marginBottom="52dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginRight="10dp"
+        android:layout_marginBottom="35dp"
         android:clickable="true"
         android:elevation="10dp"
-        app:fab_addButtonColorNormal="@color/AzulOscuro"
-        app:fab_addButtonColorPressed="@color/FondoSecundario"
-        app:fab_labelStyle="@style/fondoetiqueta"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="1.0"
-        app:layout_constraintStart_toStartOf="parent">
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/crearCita"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:fabSize="normal"
-            app:fab_colorNormal="@color/FondoSecundario"
-            app:fab_colorPressed="@color/AzulOscuro"
-            app:fab_icon="@drawable/icono_citas"
-            app:fab_title="Agregar" />
-
-        <com.getbase.floatingactionbutton.FloatingActionButton
-            android:id="@+id/consultarCita"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:fabSize="normal"
-            app:fab_colorNormal="@color/FondoSecundario"
-            app:fab_colorPressed="@color/AzulOscuro"
-            app:fab_icon="@drawable/icono_buscar"
-            app:fab_title="Consultar" />
-
-    </com.getbase.floatingactionbutton.FloatingActionsMenu>
+        android:focusable="true"
+        android:src="@drawable/ic_check"
+        app:backgroundTint="@color/AzulOscuro"
+        tools:ignore="MissingConstraints,SpeakableTextPresentCheck" />
 
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="10dp"
-        android:paddingRight="10dp">
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -65,184 +38,100 @@
             android:layout_marginTop="70dp"
             android:orientation="vertical">
 
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:orientation="horizontal">-->
+            <TextView
+                android:id="@+id/tituloPaciente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Paciente"
+                android:textColor="@color/Blanco"
+                android:textSize="14dp"
+                android:textStyle="bold" />
 
-<!--                <ImageView-->
-<!--                    android:id="@+id/iconoR"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.2"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:src="@drawable/ic_aceptado" />-->
+            <TextView
+                android:id="@+id/paciente"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="2dp"
+                android:background="@color/AzulOscuro"
+                android:drawableRight="@drawable/ic_down"
+                android:gravity="center"
+                android:padding="12dp"
+                android:text="Seleccione paciente"
+                android:textColor="@color/Blanco" />
 
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/etiquetaR"-->
-<!--                    android:layout_width="100dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:gravity="center_horizontal|center_vertical"-->
-<!--                    android:text="Cita Realizada"-->
-<!--                    android:textColor="@color/Blanco"-->
-<!--                    android:textSize="20sp" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <CheckBox-->
-<!--                    android:id="@+id/chb_realizado"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.1"-->
-<!--                    android:checked="true" />-->
-
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/iconoP"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.2"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:src="@drawable/ic_estadocita" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/etiquetaP"-->
-<!--                    android:layout_width="100dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:gravity="center_horizontal|center_vertical"-->
-<!--                    android:text="Cita Pendiente"-->
-<!--                    android:textColor="@color/Blanco"-->
-<!--                    android:textSize="20sp" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <CheckBox-->
-<!--                    android:id="@+id/chb_pendiente"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.1"-->
-<!--                    android:checked="true" />-->
-
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/iconoFecha"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.2"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:src="@drawable/icono_citas" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/etiquetaFecha"-->
-<!--                    android:layout_width="100dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:gravity="center_horizontal|center_vertical"-->
-<!--                    android:text="21/07/2019"-->
-<!--                    android:textColor="@color/Blanco"-->
-<!--                    android:textSize="20sp" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <CheckBox-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.1"-->
-<!--                    android:checked="true"-->
-<!--                    android:enabled="false" />-->
-
-<!--            </LinearLayout>-->
-
-<!--            <LinearLayout-->
-<!--                android:layout_width="match_parent"-->
-<!--                android:layout_height="match_parent"-->
-<!--                android:layout_marginTop="10dp"-->
-<!--                android:orientation="horizontal">-->
-
-<!--                <ImageView-->
-<!--                    android:id="@+id/iconoHora"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.2"-->
-<!--                    android:background="@color/AzulOscuro"-->
-<!--                    android:src="@drawable/ic_reloj" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <TextView-->
-<!--                    android:id="@+id/etiquetaHora"-->
-<!--                    android:layout_width="100dp"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="1"-->
-<!--                    android:gravity="center_horizontal|center_vertical"-->
-<!--                    android:text="3:12 AM"-->
-<!--                    android:textColor="@color/Blanco"-->
-<!--                    android:textSize="20sp" />-->
-
-<!--                <Space-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.3" />-->
-
-<!--                <CheckBox-->
-<!--                    android:id="@+id/chb_hora"-->
-<!--                    android:layout_width="wrap_content"-->
-<!--                    android:layout_height="match_parent"-->
-<!--                    android:layout_weight="0.1"-->
-<!--                    android:checked="false" />-->
-<!--            </LinearLayout>-->
-
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/listaCitas"
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                />
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <ImageView
+                    android:id="@+id/obtenerFecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_weight="0.33"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/icono_citas" />
+
+                <TextView
+                    android:id="@+id/fecha"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_weight="1.67"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:text="21/07/2016"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_marginTop="10dp"
+                android:orientation="horizontal"
+                android:weightSum="2">
+
+                <ImageView
+                    android:id="@+id/obtenerHora"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_weight="0.3"
+                    android:background="@color/AzulOscuro"
+                    android:src="@drawable/ic_reloj" />
+
+                <TextView
+                    android:id="@+id/hora"
+                    android:layout_width="wrap_content"
+                    android:layout_height="35dp"
+                    android:layout_weight="1.7"
+                    android:gravity="center_horizontal|center_vertical"
+
+                    android:text="12:00 PM"
+                    android:textColor="@color/Blanco"
+                    android:textSize="20sp"
+                    android:textStyle="bold" />
+            </LinearLayout>
+
+            <com.google.android.material.textfield.TextInputLayout
+                android:id="@+id/layoutDescripcionCita"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                app:counterEnabled="true"
+                app:counterMaxLength="100"
+                app:errorEnabled="true">
+
+                <com.google.android.material.textfield.TextInputEditText
+                    android:id="@+id/descripcion"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:hint="Descripcion"
+                    android:inputType="text"
+                    android:maxLength="100"
+                    tools:ignore="TouchTargetSizeCheck" />
+            </com.google.android.material.textfield.TextInputLayout>
+
         </LinearLayout>
     </ScrollView>
 </FrameLayout>
