--- a/app/src/main/res/layout/fragment_listado_fichas.xml
+++ b/app/src/main/res/layout/fragment_listado_fichas.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/FondoSecundario"
     tools:context=".Rutas.Fichas.FichaNormal.ListadoFichasNormales.ListadoFichas">
 
@@ -20,7 +20,7 @@
         android:layout_marginBottom="65dp"
         android:clickable="true"
         android:elevation="10dp"
-        android:src="@drawable/ic_finance"
+        android:src="@drawable/icono_buscar"
         app:backgroundTint="@color/AzulOscuro"
         tools:ignore="SpeakableTextPresentCheck" />
 
@@ -28,7 +28,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="65dp"
-        android:layout_marginBottom="65dp" >
+        android:layout_marginBottom="65dp">
 
         <LinearLayout
             android:layout_width="match_parent"
